# rfp-extractor

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  render.yaml
rfp_extractor/: __init__.py
rfp_extractor/api/: __init__.py
rfp_extractor/cli/: main.py
rfp_extractor/config/: __init__.py
rfp_extractor/extraction/: __init__.py  prompts.py
rfp_extractor/llm/: __init__.py
rfp_extractor/models/: __init__.py
rfp_extractor/parsers/: __init__.py
rfp_extractor/utils/: __init__.py
tests/: test_extractor.py
tests/test_data/: sample_rfp.md
