[project]
name = "rfp-extractor"
version = "0.1.0"
description = "AI agent for extracting requirements from RFP/RFQ/RFI documents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "eval-type-backport>=0.2",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.0",
    "markdown>=3.5",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.10",
    "python-docx>=1.1",
    "lxml>=5.0",
    "tiktoken>=0.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.25"]
gemini = ["google-genai>=1.0"]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "python-multipart>=0.0.12"]

[project.scripts]
rfp-extract = "rfp_extractor.cli.main:cli"
rfp-server = "rfp_extractor.api:start"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]